Ajout circuit.simu

--- a/codeCommun/tp/tp9/README
+++ b/codeCommun/tp/tp9/README
@@ -1,3 +1,5 @@
+Changement fait le 26mars par moussa:
+
 UART.h/cpp:
 	-Changer le namespace en une classe UART.
 	-Ajouter uint8_t received();
@@ -5,12 +7,14 @@ UART.h/cpp:
 debug.h:
 	-Changer implementation pour supprimer la redondance du code.
 	-debug.cpp supprimer (pas besoins).
-	
 
 main.cpp (fichier principal)
 	-Ajouter la fonction receptionInstructions() qui ecrit les instructions sur la memoire.
 	-squelette du corps de notre programme.
 	
-
+Circuit du tp:
+	manque juste les 2 afficheurs de 7segments
+	
+=================================================================
 
 
